test/unit/syntax-err/output.js
[
  "package.json",
  "test/unit/syntax-err/input.js"
]